--- a/source/catalog.html
+++ b/source/catalog.html
@@ -34,72 +34,79 @@
       </nav>
     </header>
     <main class="main-container">
-      <div class="hero-block">
-        <h1 class="visually-hidden">Добро пожаловать в Седону!</h1>
+      <div class="hero-block-catalog">
+        <h1 class="visually-hidden">Седона</h1>
       </div>
-      <section class="advantages">
-        <div class="advantages__wrapper">
-          <h2 class="visually-hidden">Преимущества Седоны</h2>
-          <p class="advantages__title">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
-          <p class="advantages__description">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+      <section class="gallery-photo">
+        <div class="gallery-photo__wrapper">
+          <h2 class="gallery-photo__title">Фото и видео</h2>
+          <p class="gallery-photo__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
+          <ul class="gallery-photo__list">
+            <li class="gallery-photo__item">
+              <h3 class="gallery-photo__name-card"></h3>
+              <dl class="gallery-photo__author">
+                <dt>Автор фото:</dt>
+                <dd>Борис</dd>
+              </dl>
+              <div class="gallery-photo__like">
+                <svg width="23" height="21" xmlns="http://www.w3.org/2000/svg">
+                  <path opacity=".3" d="m13 3.8-.7 3-.6 2.6h9.1v2.2l-3 7.3H8.4V8.4L13 3.8ZM2 10.5v8.4-8.4ZM13.9 0 6.9 7c-.4.2-.6.8-.6 1.4v10.5c0 1.2 1 2.1 2 2.1h9.5a2 2 0 0 0 1.9-1.3l3-7.4c.2-.2.2-.5.2-.8v-2h.1c0-1.2-1-2.2-2-2.2h-6.7l1-4.8v-.3c0-.4-.1-.8-.4-1.2l-1.1-1ZM4.2 8.4H0V21h4.2V8.4Z" fill="#000"/>
+                </svg>
+                <span class="gallery-photo__like-number">1350</span>
+              </div>
+            </li>
+            <li class="gallery-photo__item">
+              <h3 class="gallery-photo__name-card"></h3>
+              <dl class="gallery-photo__author">
+                <dt>Автор фото:</dt>
+                <dd>Сергей</dd>
+              </dl>
+              <div class="gallery-photo__like">
+                <svg width="23" height="21" xmlns="http://www.w3.org/2000/svg">
+                  <path opacity=".3" d="m13 3.8-.7 3-.6 2.6h9.1v2.2l-3 7.3H8.4V8.4L13 3.8ZM2 10.5v8.4-8.4ZM13.9 0 6.9 7c-.4.2-.6.8-.6 1.4v10.5c0 1.2 1 2.1 2 2.1h9.5a2 2 0 0 0 1.9-1.3l3-7.4c.2-.2.2-.5.2-.8v-2h.1c0-1.2-1-2.2-2-2.2h-6.7l1-4.8v-.3c0-.4-.1-.8-.4-1.2l-1.1-1ZM4.2 8.4H0V21h4.2V8.4Z" fill="#000"/>
+                </svg>
+                <span class="gallery-photo__like-number">143</span>
+              </div>
+            </li>
+            <li class="gallery-photo__item">
+              <h3 class="gallery-photo__name-card"></h3>
+              <dl class="gallery-photo__author">
+                <dt>Автор фото:</dt>
+                <dd>Пётр</dd>
+              </dl>
+              <div class="gallery-photo__like">
+                <svg width="23" height="21" xmlns="http://www.w3.org/2000/svg">
+                  <path opacity=".3" d="m13 3.8-.7 3-.6 2.6h9.1v2.2l-3 7.3H8.4V8.4L13 3.8ZM2 10.5v8.4-8.4ZM13.9 0 6.9 7c-.4.2-.6.8-.6 1.4v10.5c0 1.2 1 2.1 2 2.1h9.5a2 2 0 0 0 1.9-1.3l3-7.4c.2-.2.2-.5.2-.8v-2h.1c0-1.2-1-2.2-2-2.2h-6.7l1-4.8v-.3c0-.4-.1-.8-.4-1.2l-1.1-1ZM4.2 8.4H0V21h4.2V8.4Z" fill="#000"/>
+                </svg>
+                <span class="gallery-photo__like-number">96</span>
+              </div>
+            </li>
+            <li class="gallery-photo__item">
+              <h3 class="gallery-photo__name-card"></h3>
+              <dl class="gallery-photo__author">
+                <dt>Автор фото:</dt>
+                <dd>Антон</dd>
+              </dl>
+              <div class="gallery-photo__like">
+                <svg width="23" height="21" xmlns="http://www.w3.org/2000/svg">
+                  <path opacity=".3" d="m13 3.8-.7 3-.6 2.6h9.1v2.2l-3 7.3H8.4V8.4L13 3.8ZM2 10.5v8.4-8.4ZM13.9 0 6.9 7c-.4.2-.6.8-.6 1.4v10.5c0 1.2 1 2.1 2 2.1h9.5a2 2 0 0 0 1.9-1.3l3-7.4c.2-.2.2-.5.2-.8v-2h.1c0-1.2-1-2.2-2-2.2h-6.7l1-4.8v-.3c0-.4-.1-.8-.4-1.2l-1.1-1ZM4.2 8.4H0V21h4.2V8.4Z" fill="#000"/>
+                </svg>
+                <span class="gallery-photo__like-number">254</span>
+              </div>
+            </li>
+          </ul>
         </div>
-        <ul class="advantages__list">
-          <li class="advantage__item advantage__item--blue">
-            <h3 class="advantage__title">Настоящий городок</h3>
-            <p class="advantage__number">№1</p>
-            <p class="advantage__description">Седона не атракциаон для туристов, там течет своя жизнь</p>
-          </li>
-          <li class="advantage__item">
-            <img class="advantage__image" src="img/photo-city.jpg" alt="Вид на улицу города Седона, здание с флагами, деревья и горы на заднем плане" width="" height="">
-          </li>
-          <li class="advantage__item advantage__item--home">
-            <h3 class="advantage__title">Жилье</h3>
-            <p class="advantage__description">Рекомендуем пожить в настоящем мотеле, совсем как в кино!</p>
-          </li>
-          <li class="advantage__item advantage__item--food">
-            <h3 class="advantage__title">Еда</h3>
-            <p class="advantage__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-          </li>
-          <li class="advantage__item advantage__item--gift">
-            <h3 class="advantage__title">Сувениры</h3>
-            <p class="advantage__description">Не только китайского, но и местного производства!</p>
-          </li>
-          <li class="advantage__item advantage__item--blue">
-            <h3 class="advantage__title">Там есть мост дьявола</h3>
-            <p class="advantage__number">№2</p>
-            <p class="advantage__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-          </li>
-          <li class="advantage__item">
-            <img class="advantage__image" src="img/photo-bridge.jpg" alt="Вид на каньон Мост дьявола, каменный выступ и зеленую долину" width="" height="">
-          </li>
-          <li class="advantage__item advantage__item--gray">
-            <h3 class="advantage__title">Небольшая площадь</h3>
-            <p class="advantage__number">№3</p>
-            <p class="advantage__description">Все красивые места находятся очень близко</p>
-          </li>
-          <li class="advantage__item advantage__item--gray">
-            <h3 class="advantage__title">Красивая дорога</h3>
-            <p class="advantage__number">№4</p>
-            <p class="advantage__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-          </li>
-          <li class="advantage__item advantage__item--gray">
-            <h3 class="advantage__title">Мало туристов</h3>
-            <p class="advantage__number">№5</p>
-            <p class="advantage__description">Большинство едет в Гранд Каньон и толпится там</p>
-          </li>
-        </ul>
       </section>
-      <section class="call-to-action">
-        <div class="call-to-action__wrapper">
-          <h2 class="visually-hidden">Переход на форму поиска</h2>
-          <p class="call-to-action__title">Заинтересовались?</p>
-          <p class="call-to-action__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-          <a class="call-to-action__link button">Найти гостиницу</a>
+      <section class="video-block">
+        <div class="video-block__wrapper">
+          <h2 class="video-block__title">Все еще сомневаетесь?</h2>
+          <p class="video-block__description">Смотрите видеопрезентацию и скорее за билетами пока они не подорожали в очередной раз!</p>
+          <video src="#">
+            <p>Браузер не может отобразить данное видео. Вы можете посмотреть его
+              <a href="#">по ссылке.</a>
+            </p>
+          </video>
         </div>
-      </section>
-      <section class="contact-map">
-        <h2 class="visually-hidden">Карта</h2>
-        <map id="#" name="usemap"></map>
       </section>
     </main>
     <footer class="main-footer">
