--- a/source/form.html
+++ b/source/form.html
@@ -37,77 +37,105 @@
       <div class="hero-block hero-block--inner">
         <h1 class="visually-hidden">Седона</h1>
       </div>
-      <section class="gallery-photo">
-        <div class="gallery-photo__wrapper">
-          <h2 class="gallery-photo__title">Фото и видео</h2>
-          <p class="gallery-photo__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
-          <ul class="gallery-photo__list">
-            <li class="gallery-photo__item">
-              <h3 class="gallery-photo__name-card"></h3>
-              <dl class="gallery-photo__author">
-                <dt>Автор фото:</dt>
-                <dd>Борис</dd>
-              </dl>
-              <div class="gallery-photo__like">
-                <svg width="23" height="21" xmlns="http://www.w3.org/2000/svg">
-                  <path opacity=".3" d="m13 3.8-.7 3-.6 2.6h9.1v2.2l-3 7.3H8.4V8.4L13 3.8ZM2 10.5v8.4-8.4ZM13.9 0 6.9 7c-.4.2-.6.8-.6 1.4v10.5c0 1.2 1 2.1 2 2.1h9.5a2 2 0 0 0 1.9-1.3l3-7.4c.2-.2.2-.5.2-.8v-2h.1c0-1.2-1-2.2-2-2.2h-6.7l1-4.8v-.3c0-.4-.1-.8-.4-1.2l-1.1-1ZM4.2 8.4H0V21h4.2V8.4Z" fill="#000"/>
-                </svg>
-                <span class="gallery-photo__number">1350</span>
-              </div>
-            </li>
-            <li class="gallery-photo__item">
-              <h3 class="gallery-photo__name-card"></h3>
-              <dl class="gallery-photo__author">
-                <dt>Автор фото:</dt>
-                <dd>Сергей</dd>
-              </dl>
-              <div class="gallery-photo__like">
-                <svg width="23" height="21" xmlns="http://www.w3.org/2000/svg">
-                  <path opacity=".3" d="m13 3.8-.7 3-.6 2.6h9.1v2.2l-3 7.3H8.4V8.4L13 3.8ZM2 10.5v8.4-8.4ZM13.9 0 6.9 7c-.4.2-.6.8-.6 1.4v10.5c0 1.2 1 2.1 2 2.1h9.5a2 2 0 0 0 1.9-1.3l3-7.4c.2-.2.2-.5.2-.8v-2h.1c0-1.2-1-2.2-2-2.2h-6.7l1-4.8v-.3c0-.4-.1-.8-.4-1.2l-1.1-1ZM4.2 8.4H0V21h4.2V8.4Z" fill="#000"/>
-                </svg>
-                <span class="gallery-photo__number">143</span>
-              </div>
-            </li>
-            <li class="gallery-photo__item">
-              <h3 class="gallery-photo__name-card"></h3>
-              <dl class="gallery-photo__author">
-                <dt>Автор фото:</dt>
-                <dd>Пётр</dd>
-              </dl>
-              <div class="gallery-photo__like">
-                <svg width="23" height="21" xmlns="http://www.w3.org/2000/svg">
-                  <path opacity=".3" d="m13 3.8-.7 3-.6 2.6h9.1v2.2l-3 7.3H8.4V8.4L13 3.8ZM2 10.5v8.4-8.4ZM13.9 0 6.9 7c-.4.2-.6.8-.6 1.4v10.5c0 1.2 1 2.1 2 2.1h9.5a2 2 0 0 0 1.9-1.3l3-7.4c.2-.2.2-.5.2-.8v-2h.1c0-1.2-1-2.2-2-2.2h-6.7l1-4.8v-.3c0-.4-.1-.8-.4-1.2l-1.1-1ZM4.2 8.4H0V21h4.2V8.4Z" fill="#000"/>
-                </svg>
-                <span class="gallery-photo__number">96</span>
-              </div>
-            </li>
-            <li class="gallery-photo__item">
-              <h3 class="gallery-photo__name-card"></h3>
-              <dl class="gallery-photo__author">
-                <dt>Автор фото:</dt>
-                <dd>Антон</dd>
-              </dl>
-              <div class="gallery-photo__like">
-                <svg width="23" height="21" xmlns="http://www.w3.org/2000/svg">
-                  <path opacity=".3" d="m13 3.8-.7 3-.6 2.6h9.1v2.2l-3 7.3H8.4V8.4L13 3.8ZM2 10.5v8.4-8.4ZM13.9 0 6.9 7c-.4.2-.6.8-.6 1.4v10.5c0 1.2 1 2.1 2 2.1h9.5a2 2 0 0 0 1.9-1.3l3-7.4c.2-.2.2-.5.2-.8v-2h.1c0-1.2-1-2.2-2-2.2h-6.7l1-4.8v-.3c0-.4-.1-.8-.4-1.2l-1.1-1ZM4.2 8.4H0V21h4.2V8.4Z" fill="#000"/>
-                </svg>
-                <span class="gallery-photo__number">254</span>
-              </div>
-            </li>
-          </ul>
+      <div class="form-before-text">
+        <p class="form-before-text__title">Оставьте свой отзыв</p>
+        <p class="form-before-text__description">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о посещеных вами достопримечательностях</p>
+      </div>
+      <form class="form-feedback" action="#" method="get">
+        <h2 class="visually-hidden">Форма отзыва</h2>
+        <div class="form-feedback__wrapper">
+          <fieldset class="form-feedback__user-name">
+            <legend class="form-feedback__title">Представьтесь:</legend>
+            <ul class="form-feedback__list">
+              <li class="form-feedback__item input">
+                <label class="form-feedback__label">Имя:
+                  <input class="form-feedback__input" type="text" name="name" placeholder="Пётр">
+                </label>
+              </li>
+              <li class="form-feedback__item input">
+                <label class="form-feedback__label">Фамилия:
+                  <input class="form-feedback__input" type="text" name="name" placeholder="Пустота">
+                </label>
+              </li>
+              <li class="form-feedback__item input">
+                <label class="form-feedback__label">Отчество:
+                  <input class="form-feedback__input" type="text" name="name" placeholder="Викторович">
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+          <fieldset class="form-feedback__contact">
+            <legend class="form-feedback__title">Контактная информация:</legend>
+            <ul class="form-feedback__list">
+              <li class="form-feedback__item form-feedback__item--with-icon input">
+                <label class="form-feedback__label">Контактный телефон:
+                  <input class="form-feedback__input" type="text" name="name" placeholder="Введите телефон">
+                </label>
+              </li>
+              <li class="form-feedback__item form-feedback__item--with-icon input">
+                <label class="form-feedback__label">Электронная почта:
+                  <input class="form-feedback__input" type="text" name="name" placeholder="Введите e-mail">
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+          <fieldset class="form-feedback__impression">
+            <legend class="form-feedback__title">Ваше общее впечатление:</legend>
+            <ul class="form-feedback__list">
+              <li class="form-feedback__item">
+                <label class="form-feedback__label">Скорее положительное
+                  <input class="form-feedback__input checked" type="radio" name="Скорее положительное" checked>
+                </label>
+              </li>
+              <li class="form-feedback__item">
+                <label class="form-feedback__label">Скорее отрицательное
+                  <input class="form-feedback__input" type="radio" name="Скорее отрицательное" >
+                </label>
+              </li>
+              <li class="form-feedback__item">
+                <label class="form-feedback__label">Затрудняюсь ответить
+                  <input class="form-feedback__input" type="radio" name="Затрудняюсь ответить">
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+          <fieldset class="form-feedback__attractions">
+            <legend class="form-feedback__title">Ваше общее впечатление:</legend>
+            <ul class="form-feedback__list">
+              <li class="form-feedback__item">
+                <label class="form-feedback__label">Мост Дьявола
+                  <input class="form-feedback__input checked" type="checkbox" name="Мост Дьявола" checked>
+                </label>
+              </li>
+              <li class="form-feedback__item">
+                <label class="form-feedback__label">Гора-Колокол
+                  <input class="form-feedback__input checked" type="checkbox" name="Гора-Колокол" checked>
+                </label>
+              </li>
+              <li class="form-feedback__item">
+                <label class="form-feedback__label">Слайд-парк
+                  <input class="form-feedback__input checked" type="checkbox" name="Слайд-парк"checked>
+                </label>
+              </li>
+              <li class="form-feedback__item">
+                <label class="form-feedback__label">Красные скалы
+                  <input class="form-feedback__input" type="checkbox" name="Красные скалы">
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+          <fieldset class="form-feedback__attractions">
+            <legend class="form-feedback__title">Ваше общее впечатление:</legend>
+                <label class="form-feedback__label">
+                  <textarea class="form-feedback__text" name="attractions" rows="5" cols="33">Опишите подробно все свои восторги </textarea>
+                </label>
+          </fieldset>
+          <div class="form-feedback__wrapper">
+            <button class="form-feedback__button button" type="submit">Оставить отзыв</button>
+            <span class="form-feedback__hint">* — обязательные поля</span>
+          </div>
         </div>
-      </section>
-      <section class="video-block">
-        <div class="video-block__wrapper">
-          <h2 class="video-block__title">Все еще сомневаетесь?</h2>
-          <p class="video-block__description">Смотрите видеопрезентацию и скорее за билетами пока они не подорожали в очередной раз!</p>
-          <video src="#">
-            <p>Браузер не может отобразить данное видео. Вы можете посмотреть его
-              <a href="#">по ссылке.</a>
-            </p>
-          </video>
-        </div>
-      </section>
+      </form>
     </main>
     <footer class="main-footer">
       <div class="main-footer__wrapper">
