--- a/source/index.html
+++ b/source/index.html
@@ -44,54 +44,54 @@
           <p class="advantages__description">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
         </div>
         <ul class="advantages__list">
-          <li class="advantage__item advantage__item--blue">
-            <h3 class="advantage__title">Настоящий городок</h3>
-            <p class="advantage__number">№1</p>
-            <p class="advantage__description">Седона не атракциаон для туристов, там течет своя жизнь</p>
+          <li class="advantages__item advantages__item--with-img">
+            <h3 class="advantages__title">Настоящий городок</h3>
+            <p class="advantages__number">№1</p>
+            <p class="advantages__description">Седона не атракциаон для туристов, там течет своя жизнь</p>
           </li>
-          <li class="advantage__item">
-            <img class="advantage__image" src="img/photo-city.jpg" alt="Вид на улицу города Седона, здание с флагами, деревья и горы на заднем плане" width="" height="">
+          <li class="advantages__item">
+            <img class="advantages__image" src="img/photo-city.jpg" alt="Вид на улицу города Седона, здание с флагами, деревья и горы на заднем плане" width="" height="">
           </li>
-          <li class="advantage__item advantage__item--home">
-            <h3 class="advantage__title">Жилье</h3>
-            <p class="advantage__description">Рекомендуем пожить в настоящем мотеле, совсем как в кино!</p>
+          <li class="advantages__item advantages__item--home">
+            <h3 class="advantages__title">Жилье</h3>
+            <p class="advantages__description">Рекомендуем пожить в настоящем мотеле, совсем как в кино!</p>
           </li>
-          <li class="advantage__item advantage__item--food">
-            <h3 class="advantage__title">Еда</h3>
-            <p class="advantage__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+          <li class="advantages__item advantages__item--food">
+            <h3 class="advantages__title">Еда</h3>
+            <p class="advantages__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
           </li>
-          <li class="advantage__item advantage__item--gift">
-            <h3 class="advantage__title">Сувениры</h3>
-            <p class="advantage__description">Не только китайского, но и местного производства!</p>
+          <li class="advantages__item advantages__item--gift">
+            <h3 class="advantages__title">Сувениры</h3>
+            <p class="advantages__description">Не только китайского, но и местного производства!</p>
           </li>
-          <li class="advantage__item advantage__item--blue">
-            <h3 class="advantage__title">Там есть мост дьявола</h3>
-            <p class="advantage__number">№2</p>
-            <p class="advantage__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+          <li class="advantages__item advantages__item--with-img">
+            <h3 class="advantages__title">Там есть мост дьявола</h3>
+            <p class="advantages__number">№2</p>
+            <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
           </li>
-          <li class="advantage__item">
-            <img class="advantage__image" src="img/photo-bridge.jpg" alt="Вид на каньон Мост дьявола, каменный выступ и зеленую долину" width="" height="">
+          <li class="advantages__item">
+            <img class="advantages__image" src="img/photo-bridge.jpg" alt="Вид на каньон Мост дьявола, каменный выступ и зеленую долину" width="" height="">
           </li>
-          <li class="advantage__item advantage__item--gray">
-            <h3 class="advantage__title">Небольшая площадь</h3>
-            <p class="advantage__number">№3</p>
-            <p class="advantage__description">Все красивые места находятся очень близко</p>
+          <li class="advantages__item">
+            <h3 class="advantages__title">Небольшая площадь</h3>
+            <p class="advantages__number">№3</p>
+            <p class="advantages__description">Все красивые места находятся очень близко</p>
           </li>
-          <li class="advantage__item advantage__item--gray">
-            <h3 class="advantage__title">Красивая дорога</h3>
-            <p class="advantage__number">№4</p>
-            <p class="advantage__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          <li class="advantages__item">
+            <h3 class="advantages__title">Красивая дорога</h3>
+            <p class="advantages__number">№4</p>
+            <p class="advantages__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
-          <li class="advantage__item advantage__item--gray">
-            <h3 class="advantage__title">Мало туристов</h3>
-            <p class="advantage__number">№5</p>
-            <p class="advantage__description">Большинство едет в Гранд Каньон и толпится там</p>
+          <li class="advantages__item">
+            <h3 class="advantages__title">Мало туристов</h3>
+            <p class="advantages__number">№5</p>
+            <p class="advantages__description">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
         </ul>
       </section>
       <section class="call-to-action">
         <div class="call-to-action__wrapper">
-          <h2 class="visually-hidden">Переход на форму поиска</h2>
+          <h2 class="visually-hidden">Поиск гостиниц</h2>
           <p class="call-to-action__title">Заинтересовались?</p>
           <p class="call-to-action__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
           <a class="call-to-action__link button">Найти гостиницу</a>
