--- a/source/catalog.html
+++ b/source/catalog.html
@@ -19,16 +19,16 @@
         <div class="main-nav__wrapper">
           <ul class="main-nav__list">
             <li class="main-nav__item main-nav__item--active">
-              <a class="" href="#">Главная</a>
+              <a class="link main-nav-link" href="#">Главная</a>
             </li>
             <li class="main-nav__item">
-              <a class="" href="#">Фото и видео</a>
+              <a class="link main-nav-link" href="#">Фото и видео</a>
             </li>
             <li class="main-nav__item">
-              <a class="" href="#">Форма отзыва</a>
+              <a class="link main-nav-link" href="#">Форма отзыва</a>
             </li>
             <li class="main-nav__item">
-              <a class="" href="#">HTML Academy</a>
+              <a class="link main-nav-link" href="#">HTML Academy</a>
             </li>
           </ul>
         </div>
