--- a/source/index.html
+++ b/source/index.html
@@ -19,16 +19,16 @@
         <div class="main-nav__wrapper">
           <ul class="main-nav__list">
             <li class="main-nav__item main-nav__item--active">
-              <a class="" href="#">Главная</a>
+              <a class="link main-nav-link" href="#">Главная</a>
             </li>
             <li class="main-nav__item">
-              <a class="" href="#">Фото и видео</a>
+              <a class="link main-nav-link" href="#">Фото и видео</a>
             </li>
             <li class="main-nav__item">
-              <a class="" href="#">Форма отзыва</a>
+              <a class="link main-nav-link" href="#">Форма отзыва</a>
             </li>
             <li class="main-nav__item">
-              <a class="" href="#">HTML Academy</a>
+              <a class="link main-nav-link" href="#">HTML Academy</a>
             </li>
           </ul>
         </div>
@@ -50,44 +50,49 @@
             <p class="advantages__number">№1</p>
             <p class="advantages__description">Седона не атракциаон для туристов, там течет своя жизнь</p>
           </li>
-          <li class="advantages__item">
+          <li class="advantages__item advantages__item--img">
             <img class="advantages__image" src="img/photo-city.jpg" alt="Вид на улицу города Седона, здание с флагами, деревья и горы на заднем плане" width="" height="">
           </li>
           <li class="advantages__item advantages__item--home">
-            <h3 class="advantages__title">Жилье</h3>
-            <p class="advantages__description">Рекомендуем пожить в настоящем мотеле, совсем как в кино!</p>
+            <h3 class="advantages__title advantages__title--align-left">Жилье</h3>
+            <p class="advantages__description advantages__description--align-left">Рекомендуем пожить в настоящем мотеле, совсем как в кино!</p>
           </li>
           <li class="advantages__item advantages__item--food">
-            <h3 class="advantages__title">Еда</h3>
-            <p class="advantages__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+            <h3 class="advantages__title advantages__title--align-left">Еда</h3>
+            <p class="advantages__description advantages__description--align-left">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
           </li>
           <li class="advantages__item advantages__item--gift">
-            <h3 class="advantages__title">Сувениры</h3>
-            <p class="advantages__description">Не только китайского, но и местного производства!</p>
+            <h3 class="advantages__title advantages__title--align-left">Сувениры</h3>
+            <p class="advantages__description advantages__description--align-left">Не только китайского, но и местного производства!</p>
           </li>
           <li class="advantages__item advantages__item--with-img">
             <h3 class="advantages__title">Там есть мост дьявола</h3>
             <p class="advantages__number">№2</p>
             <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
           </li>
-          <li class="advantages__item">
+          <li class="advantages__item advantages__item--img">
             <img class="advantages__image" src="img/photo-bridge.jpg" alt="Вид на каньон Мост дьявола, каменный выступ и зеленую долину" width="" height="">
           </li>
           <li class="advantages__item">
-            <h3 class="advantages__title">Небольшая площадь</h3>
-            <p class="advantages__number">№3</p>
-            <p class="advantages__description">Все красивые места находятся очень близко</p>
+            <ul class="advantages__list--gray">
+              <li class="advantages__item">
+                <h3 class="advantages__title">Небольшая площадь</h3>
+                <p class="advantages__number">№3</p>
+                <p class="advantages__description">Все красивые места находятся очень близко</p>
+              </li>
+              <li class="advantages__item">
+                <h3 class="advantages__title">Красивая дорога</h3>
+                <p class="advantages__number">№4</p>
+                <p class="advantages__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+              </li>
+              <li class="advantages__item">
+                <h3 class="advantages__title">Мало туристов</h3>
+                <p class="advantages__number">№5</p>
+                <p class="advantages__description">Большинство едет в Гранд Каньон и толпится там</p>
+              </li>
+            </ul>
           </li>
-          <li class="advantages__item">
-            <h3 class="advantages__title">Красивая дорога</h3>
-            <p class="advantages__number">№4</p>
-            <p class="advantages__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-          </li>
-          <li class="advantages__item">
-            <h3 class="advantages__title">Мало туристов</h3>
-            <p class="advantages__number">№5</p>
-            <p class="advantages__description">Большинство едет в Гранд Каньон и толпится там</p>
-          </li>
+
         </ul>
       </section>
       <section class="call-to-action">
@@ -95,12 +100,12 @@
           <h2 class="visually-hidden">Поиск гостиниц</h2>
           <p class="call-to-action__title">Заинтересовались?</p>
           <p class="call-to-action__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-          <a class="call-to-action__link button">Найти гостиницу</a>
+          <button class="call-to-action__button button-primary" type="button">Найти гостиницу</button>
         </div>
-      </section>
-      <section class="contact-map">
-        <h2 class="visually-hidden">Карта</h2>
-        <map id="#" name="usemap"></map>
+        <div class="contact-map">
+          <h2 class="visually-hidden">Карта</h2>
+          <map id="#" name="usemap"></map>
+        </div>
       </section>
     </main>
     <footer class="main-footer">
