--- a/source/index.html
+++ b/source/index.html
@@ -53,17 +53,36 @@
           <li class="advantages__item advantages__item--img">
             <img class="advantages__image" src="img/photo-city.jpg" alt="Вид на улицу города Седона, здание с флагами, деревья и горы на заднем плане" width="" height="">
           </li>
-          <li class="advantages__item advantages__item--home">
-            <h3 class="advantages__title advantages__title--align-left">Жилье</h3>
-            <p class="advantages__description advantages__description--align-left">Рекомендуем пожить в настоящем мотеле, совсем как в кино!</p>
-          </li>
-          <li class="advantages__item advantages__item--food">
-            <h3 class="advantages__title advantages__title--align-left">Еда</h3>
-            <p class="advantages__description advantages__description--align-left">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-          </li>
-          <li class="advantages__item advantages__item--gift">
-            <h3 class="advantages__title advantages__title--align-left">Сувениры</h3>
-            <p class="advantages__description advantages__description--align-left">Не только китайского, но и местного производства!</p>
+          <li class="advantages__item">
+            <ul class="advantages__list--icons">
+              <li class="advantages__item advantages__item--icon">
+                <svg class="advantages__icon" width="40" height="40" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M15.9 34.8h8.4V22.6h-8.4v12.2Zm6.8-1.5h-5.3v-9.2h5.3v9.2Z" fill="#81B3D2"/><path d="m38.4 21.6 1.1-1-5.2-5V1.7h-7.2v6.7l-7.1-7L.5 20.7l1.1 1 4-3.9V37h-2v1.5H37V37h-2.7V17.7l4.1 4ZM28.6 3.3h4.2V14l-4.2-4V3.3ZM32.8 37H7.2V16.2L20 3.7l12.8 12.5v20.7Z" fill="#81B3D2"/><path d="M16 15.4a4 4 0 0 0 4 4 4 4 0 0 0 4.2-4 4 4 0 0 0-4.1-3.9 4 4 0 0 0-4 4Zm4-2.5c1.5 0 2.7 1.1 2.7 2.5S21.5 18 20 18a2.6 2.6 0 0 1-2.6-2.6c0-1.4 1.2-2.5 2.6-2.5ZM10.9 22.6H9.3v2H11v-2ZM14 22.6h-1.6v2H14v-2ZM10.9 25.7H9.3v2H11v-2ZM14 25.7h-1.6v2H14v-2ZM27.5 22.6H26v2h1.5v-2ZM30.7 22.6H29v2h1.6v-2ZM27.5 25.7H26v2h1.5v-2ZM30.7 25.7H29v2h1.6v-2Z" fill="#81B3D2"/>
+                </svg>
+                <div class="advantages__item-text">
+                  <h3 class="advantages__title advantages__title--align-left">Жилье</h3>
+                  <p class="advantages__description advantages__description--align-left">Рекомендуем пожить в настоящем мотеле, совсем как в кино!</p>
+                </div>
+              </li>
+              <li class="advantages__item advantages__item--icon">
+                <svg class="advantages__icon" width="40" height="40" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M37.7 25.9H2.3C1 25.9 0 26.9 0 28v1.8c0 1.2 1 2.1 2.3 2.1h.5v.5c0 2.8 2.3 5 5.2 5h24c3 0 5.2-2.2 5.2-5V32h.5c1.3 0 2.3-1 2.3-2.1V28c0-1.1-1-2.1-2.3-2.1Zm-2 6.5c0 2-1.6 3.5-3.6 3.5H7.9c-2 0-3.6-1.5-3.6-3.5V32h31.4v.5Zm2.7-2.6c0 .3-.3.6-.7.6H2.3a.7.7 0 0 1-.7-.6V28c0-.3.3-.6.7-.6h35.5c.4 0 .7.3.7.6v1.8ZM8.5 21.7l2.8 2 3-2 2.8 2 2.9-2 2.8 2 3-2 2.8 2 2.9-2 2.9 2 3.3-2.3-.9-1.2-2.4 1.6-2.9-2-2.9 2-2.9-2-2.9 2-2.8-2-2.9 2-2.9-2-2.9 2-2.8-2-2.9 2-2.4-1.6-1 1.2 3.4 2.4 2.9-2ZM37.2 18.3v-1.5c-.3-8-8-14.2-17.2-14.2-9.3 0-16.9 6.3-17.3 14.2v1.5h34.5ZM20 4.1c8.4 0 15.3 5.6 15.6 12.7H4.3C4.7 9.8 11.6 4 20 4Z" fill="#81B3D2"/><path d="M20 11.2c.6 0 1-.5 1-1 0-.6-.4-1-1-1a1 1 0 0 0-1 1c0 .5.4 1 1 1ZM15.8 8.7c.6 0 1-.5 1-1 0-.6-.4-1-1-1a1 1 0 0 0-1 1c0 .5.4 1 1 1ZM24.2 8.7c.6 0 1-.5 1-1 0-.6-.4-1-1-1a1 1 0 0 0-1 1c0 .5.4 1 1 1Z" fill="#81B3D2"/>
+                </svg>
+                <div class="advantages__item-text">
+                  <h3 class="advantages__title advantages__title--align-left">Еда</h3>
+                  <p class="advantages__description advantages__description--align-left">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+                </div>
+              </li>
+              <li class="advantages__item advantages__item--icon">
+                <svg class="advantages__icon" width="40" height="40" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M34.6 12.2H22.1c6.9-3.4 7.5-5.6 7.2-6.8-.6-2-2.8-3.5-5-2.7-2.8 1-3.5 5.2-4.3 8.2-1-3-1.9-6.9-4-8.9a3.7 3.7 0 0 0-3-1c-2 .2-4.9 2.7-3.7 5.5 1.2 2.7 4.9 4.4 7.3 5.8H5.4c-.8 0-1.4.6-1.4 1.4v5.6c0 .9.7 1.5 1.4 1.5h.2V39h29V20.8c.8 0 1.4-.7 1.4-1.5v-5.6c0-.8-.7-1.5-1.4-1.5ZM25.2 4c1.1-.1 2.5.7 2.7 1.7.2 1.3-1.7 2.6-2.6 3.2-1.2.8-2.5 1.3-3.6 2 .4-1.9 1.2-6.5 3.5-6.9ZM13.8 9c-1.2-.7-3.3-2.2-3.2-3.9 0-1.8 2.8-3.3 4.4-2 1.9 1.8 2.8 5.7 3.5 8.4-1.6-.8-3.1-1.4-4.7-2.5Zm3 28.6H7V20.8h9.7v16.7Zm0-18.3H5.4v-5.5h11.2v5.5Zm5 18.3h-3.6V13.7h3.6v23.8Zm11.2 0h-9.6V20.8H33v16.7H33Zm1.5-18.3H23.4v-5.5h11v5.5Z" fill="#81B3D2"/>
+                </svg>
+                <div class="advantages__item-text">
+                  <h3 class="advantages__title advantages__title--align-left">Сувениры</h3>
+                  <p class="advantages__description advantages__description--align-left">Не только китайского, но и местного производства!</p>
+                </div>
+              </li>
+            </ul>
           </li>
           <li class="advantages__item advantages__item--with-img">
             <h3 class="advantages__title">Там есть мост дьявола</h3>
@@ -112,30 +131,30 @@
       <div class="main-footer__wrapper">
         <section class="main-footer__hashtag hashtag">
           <h2 class="visually-hidden">visit sedona</h2>
-          <a class="hashtag__link" href="#">#visitsedona</a>
+          <a class="main-footer__hashtag-link" href="#">#visitsedona</a>
         </section>
         <section class="main-footer__social-network social-network">
           <h2 class="visually-hidden">Социальные сети</h2>
           <ul class="social-network__list">
             <li class="social-network__item social-network__item--vk">
-              <a class="social-network">
-                <svg width="24" height="14" xmlns="http://www.w3.org/2000/svg">
+              <a class="social-network__link">
+                <svg class="social-network__icon" width="24" height="14" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M23.4 1c.2-.6 0-1-.7-1H20c-.6 0-1 .3-1.1.7 0 0-1.3 3.2-3.2 5.3-.7.6-1 .8-1.3.8-.1 0-.4-.2-.4-.7V.9c0-.6-.2-.9-.7-.9H9.2c-.5 0-.7.3-.7.6 0 .6 1 .8 1 2.5V7c0 .8-.1 1-.5 1-.9 0-3-3.2-4.3-6.9-.3-.7-.5-1-1.2-1H1C.1 0 0 .3 0 .7c0 .7.9 4.1 4.1 8.6 2.2 3 5.3 4.7 8 4.7 1.7 0 2-.4 2-1v-2.3c0-.8 0-.9.6-.9.4 0 1 .2 2.6 1.7 1.8 1.7 2.1 2.5 3.1 2.5H23c.8 0 1.2-.4 1-1.1-.3-.7-1.1-1.8-2.3-3L20 8c-.4-.5-.3-.7 0-1.1 0 0 3.2-4.4 3.5-6Z"/>
                 </svg>
                 <span class="visually-hidden">Вконтакте</span>
               </a>
             </li>
             <li class="social-network__item social-network__item--telegram">
-              <a class="social-network">
-                <svg width="22" height="18" xmlns="http://www.w3.org/2000/svg">
+              <a class="social-network__link">
+                <svg class="social-network__icon" width="22" height="18" xmlns="http://www.w3.org/2000/svg">
                   <path d="m21.4 1.6-3.1 15c-.3 1-.9 1.3-1.8.8l-4.8-3.6-2.3 2.3c-.3.2-.5.4-1 .4l.3-4.9 9-8c.4-.4-.1-.6-.6-.3l-11 7-4.8-1.5c-1-.3-1-1 .2-1.5L20 0c.9-.3 1.6.2 1.3 1.5Z"/>
                 </svg>
                 <span class="visually-hidden">Телеграм</span>
               </a>
             </li>
             <li class="social-network__item social-network__item--youtube">
-              <a class="social-network">
-                <svg width="20" height="14" xmlns="http://www.w3.org/2000/svg">
+              <a class="social-network__link">
+                <svg class="social-network__icon" width="20" height="14" xmlns="http://www.w3.org/2000/svg">
                   <path d="M17.2 0H2.8A2.9 2.9 0 0 0 0 2.8v8.3C0 12.7 1.3 14 2.8 14h14.4c1.6 0 2.8-1.3 2.8-2.8V2.8C20 1.3 18.8 0 17.2 0ZM7 10.4V3.6L14 7 7 10.4Z"/>
                 </svg>
                 <span class="visually-hidden">Ютуб</span>
@@ -146,7 +165,7 @@
         <section class="main-footer__copyright copyright">
           <h2 class="visually-hidden">Разработано в HTML Academy</h2>
           <a class="copyright__link" href="#">
-            <span>Разработано</span>
+            <span class="copyright__text">Разработано</span>
             <svg width="27" height="35" xmlns="http://www.w3.org/2000/svg">
               <path d="M13.6 0h-.1L0 1.4v24.7l13.5 8 13.4-8V1.4L13.6 0ZM25 12.1 13.5 5.3v-.1h-.1l-.1-.1v.1L1.9 12.1v-9l11.5-1.2L25 3.1v9ZM13.4 6.8l11.5 6.7-4.5 2.6-7.1-4.2v1.4l5.9 3.5-.9.5-5-3v1.4l3.8 2.3-.8.5-3-1.8v1.4l1.9 1.1-1.8 1.1L2 13.6l11.4-6.8ZM1.9 15.1l11.4 6.8v1l-7.9-4.7v1.4l8 4.8v1.1l-8-4.7v1.4l8 4.8 8.1-4.9v-5.2l3.4-2v10l-11.5 6.9L1.9 25v-9.9Z"/>
             </svg>
