Вносит изменения в разметку

--- a/source/index.html
+++ b/source/index.html
@@ -16,7 +16,7 @@
         <button class="main-nav__toogle main-nav__toogle--burger-menu" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
-        <div class="main-nav__wrappe">
+        <div class="main-nav__wrapper">
           <ul class="main-nav__list">
             <li class="main-nav__item main-nav__item--active">
               <a class="link main-nav-link" href="#">Главная</a>
@@ -37,21 +37,23 @@
     <main class="main-container">
       <div class="hero-block">
         <h1 class="visually-hidden">Добро пожаловать в Седону!</h1>
+        <div class="hero-block__img"></div>
       </div>
       <section class="advantages">
-        <div class="advantages__wrapper">
+        <div class="advantages__intro">
           <h2 class="visually-hidden">Преимущества Седоны</h2>
-          <p class="advantages__title">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+          <p class="advantages__title advantages__title--intro">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
           <p class="advantages__description">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
         </div>
+        <div class="advantages__decor"></div>
         <ul class="advantages__list">
           <li class="advantages__item advantages__item--with-img">
             <h3 class="advantages__title">Настоящий городок</h3>
-            <p class="advantages__number">№1</p>
+            <p class="advantages__number">— №1 —</p>
             <p class="advantages__description">Седона не атракциаон для туристов, там течет своя жизнь</p>
           </li>
           <li class="advantages__item advantages__item--img">
-            <img class="advantages__image" src="img/photo-city.jpg" alt="Вид на улицу города Седона, здание с флагами, деревья и горы на заднем плане" width="" height="">
+            <img class="advantages__image" src="img/photo-city.jpg" alt="Вид на улицу города Седона, здание с флагами, деревья и горы на заднем плане" width="320" height="260">
           </li>
           <li class="advantages__item">
             <ul class="advantages__list--icons">
@@ -86,28 +88,34 @@
           </li>
           <li class="advantages__item advantages__item--with-img">
             <h3 class="advantages__title">Там есть мост дьявола</h3>
-            <p class="advantages__number">№2</p>
+            <p class="advantages__number">— №2 —</p>
             <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
           </li>
           <li class="advantages__item advantages__item--img">
-            <img class="advantages__image" src="img/photo-bridge.jpg" alt="Вид на каньон Мост дьявола, каменный выступ и зеленую долину" width="" height="">
+            <img class="advantages__image" src="img/photo-bridge.jpg" alt="Вид на каньон Мост дьявола, каменный выступ и зеленую долину" width="320" height="260">
           </li>
           <li class="advantages__item">
             <ul class="advantages__list--gray">
               <li class="advantages__item">
                 <h3 class="advantages__title">Небольшая площадь</h3>
-                <p class="advantages__number">№3</p>
-                <p class="advantages__description">Все красивые места находятся очень близко</p>
+                <p class="advantages__number">— №3 —</p>
+                <p class="advantages__description">Все красивые места находятся<br> очень близко</p>
+              </li>
+              <li class="advantages__item">
+                <div class="advantages__separator"></div>
               </li>
               <li class="advantages__item">
                 <h3 class="advantages__title">Красивая дорога</h3>
-                <p class="advantages__number">№4</p>
-                <p class="advantages__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+                <p class="advantages__number">— №4 —</p>
+                <p class="advantages__description">Ехать в Седону из Лас-Вегаса<br> совсем не скучно!</p>
+              </li>
+              <li class="advantages__item">
+                <div class="advantages__separator"></div>
               </li>
               <li class="advantages__item">
                 <h3 class="advantages__title">Мало туристов</h3>
-                <p class="advantages__number">№5</p>
-                <p class="advantages__description">Большинство едет в Гранд Каньон и толпится там</p>
+                <p class="advantages__number">— №5 —</p>
+                <p class="advantages__description">Большинство едет в Гранд Каньон<br> и толпится там</p>
               </li>
             </ul>
           </li>
