добавляет заглушку карты

--- a/source/index.html
+++ b/source/index.html
@@ -131,7 +131,10 @@
         </div>
         <div class="contact-map">
           <h2 class="visually-hidden">Карта</h2>
-          <map id="#" name="usemap"></map>
+          <div>
+            <img src="img/map-mobile.png" alt="Карта местности" width="320" height="350">
+            <map id="#" name="usemap"></map>
+          </div>
         </div>
       </section>
     </main>
