--- a/source/form.html
+++ b/source/form.html
@@ -51,7 +51,7 @@
       <form class="form-feedback" action="#" method="get">
         <h2 class="visually-hidden">Форма отзыва</h2>
         <div class="form-feedback__wrapper">
-          <fieldset class="form-feedback__block form-block--name">
+          <fieldset class="form-feedback__block form-feedback__block--name">
             <h3 class="title title--form-feedback">Представьтесь:</h3>
             <legend class="visually-hidden">Представьтесь</legend>
             <ul class="form-feedback__list form-feedback__list--inputs">
@@ -70,7 +70,7 @@
             </ul>
           </fieldset>
           <div class="form-feedback__separator"></div>
-          <fieldset class="form-feedback__block form-block--contact">
+          <fieldset class="form-feedback__block form-feedback__block--contact">
             <h3 class="title title--form-feedback">Контактная информация:</h3>
             <legend class="visually-hidden">Контактная информация</legend>
             <ul class="form-feedback__list form-feedback__list--inputs">
