--- a/source/catalog.html
+++ b/source/catalog.html
@@ -46,11 +46,11 @@
       <section class="gallery-photo">
         <div class="gallery-photo__intro">
           <h2 class="gallery-photo__title title--large">Фото и видео</h2>
-          <p class="gallery-photo__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
+          <p class="gallery-photo__intro-description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
         </div>
           <ul class="gallery-photo__list">
             <li class="gallery-photo__item">
-              <img class="gallery-photo__img" src="img/photo-1-mobile.jpg.png" alt="дорога через каньон на закате" width="280" height="280">
+              <div class="gallery-photo__img gallery-photo__img--one"></div>
               <div class="gallery-photo__data">
                 <div class="gallery-photo__description">
                   <h3 class="gallery-photo__name-card">Неродные просторы</h3>
@@ -61,14 +61,14 @@
                 </div>
                 <div class="gallery-photo__like">
                   <svg class="gallery-photo__like-icon" width="23" height="21" xmlns="http://www.w3.org/2000/svg">
-                    <path opacity=".3" d="m13 3.8-.7 3-.6 2.6h9.1v2.2l-3 7.3H8.4V8.4L13 3.8ZM2 10.5v8.4-8.4ZM13.9 0 6.9 7c-.4.2-.6.8-.6 1.4v10.5c0 1.2 1 2.1 2 2.1h9.5a2 2 0 0 0 1.9-1.3l3-7.4c.2-.2.2-.5.2-.8v-2h.1c0-1.2-1-2.2-2-2.2h-6.7l1-4.8v-.3c0-.4-.1-.8-.4-1.2l-1.1-1ZM4.2 8.4H0V21h4.2V8.4Z" fill="#000"/>
+                    <path fill="currentColor" d="m13 3.8-.7 3-.6 2.6h9.1v2.2l-3 7.3H8.4V8.4L13 3.8ZM2 10.5v8.4-8.4ZM13.9 0 6.9 7c-.4.2-.6.8-.6 1.4v10.5c0 1.2 1 2.1 2 2.1h9.5a2 2 0 0 0 1.9-1.3l3-7.4c.2-.2.2-.5.2-.8v-2h.1c0-1.2-1-2.2-2-2.2h-6.7l1-4.8v-.3c0-.4-.1-.8-.4-1.2l-1.1-1ZM4.2 8.4H0V21h4.2V8.4Z" fill="#000"/>
                   </svg>
                   <span class="gallery-photo__number">1350</span>
                 </div>
               </div>
             </li>
-            <li class="gallery-photo__item">
-              <img class="gallery-photo__img" src="img/photo-2-mobile.jpg.png" alt="растения на фоне каньона" width="280" height="280">
+            <li class="gallery-photo__item gallery-photo__item--two">
+              <div class="gallery-photo__img gallery-photo__img--two"></div>
               <div class="gallery-photo__data">
                 <div class="gallery-photo__description">
                   <h3 class="gallery-photo__name-card">Местная растительность</h3>
@@ -79,14 +79,14 @@
                 </div>
                 <div class="gallery-photo__like">
                   <svg class="gallery-photo__like-icon" width="23" height="21" xmlns="http://www.w3.org/2000/svg">
-                    <path opacity=".3" d="m13 3.8-.7 3-.6 2.6h9.1v2.2l-3 7.3H8.4V8.4L13 3.8ZM2 10.5v8.4-8.4ZM13.9 0 6.9 7c-.4.2-.6.8-.6 1.4v10.5c0 1.2 1 2.1 2 2.1h9.5a2 2 0 0 0 1.9-1.3l3-7.4c.2-.2.2-.5.2-.8v-2h.1c0-1.2-1-2.2-2-2.2h-6.7l1-4.8v-.3c0-.4-.1-.8-.4-1.2l-1.1-1ZM4.2 8.4H0V21h4.2V8.4Z" fill="#000"/>
+                    <path fill="currentColor" d="m13 3.8-.7 3-.6 2.6h9.1v2.2l-3 7.3H8.4V8.4L13 3.8ZM2 10.5v8.4-8.4ZM13.9 0 6.9 7c-.4.2-.6.8-.6 1.4v10.5c0 1.2 1 2.1 2 2.1h9.5a2 2 0 0 0 1.9-1.3l3-7.4c.2-.2.2-.5.2-.8v-2h.1c0-1.2-1-2.2-2-2.2h-6.7l1-4.8v-.3c0-.4-.1-.8-.4-1.2l-1.1-1ZM4.2 8.4H0V21h4.2V8.4Z" fill="#000"/>
                   </svg>
                   <span class="gallery-photo__number">143</span>
                 </div>
               </div>
             </li>
             <li class="gallery-photo__item">
-              <img class="gallery-photo__img" src="img/photo-3-mobile.jpg.png" alt="серпантин в лесу в горах" width="280" height="280">
+              <div class="gallery-photo__img gallery-photo__img--three"></div>
               <div class="gallery-photo__data">
                 <div class="gallery-photo__description">
                   <h3 class="gallery-photo__name-card">Дорога на север</h3>
@@ -97,14 +97,14 @@
                 </div>
                 <div class="gallery-photo__like">
                   <svg class="gallery-photo__like-icon" width="23" height="21" xmlns="http://www.w3.org/2000/svg">
-                    <path opacity=".3" d="m13 3.8-.7 3-.6 2.6h9.1v2.2l-3 7.3H8.4V8.4L13 3.8ZM2 10.5v8.4-8.4ZM13.9 0 6.9 7c-.4.2-.6.8-.6 1.4v10.5c0 1.2 1 2.1 2 2.1h9.5a2 2 0 0 0 1.9-1.3l3-7.4c.2-.2.2-.5.2-.8v-2h.1c0-1.2-1-2.2-2-2.2h-6.7l1-4.8v-.3c0-.4-.1-.8-.4-1.2l-1.1-1ZM4.2 8.4H0V21h4.2V8.4Z" fill="#000"/>
+                    <path fill="currentColor" d="m13 3.8-.7 3-.6 2.6h9.1v2.2l-3 7.3H8.4V8.4L13 3.8ZM2 10.5v8.4-8.4ZM13.9 0 6.9 7c-.4.2-.6.8-.6 1.4v10.5c0 1.2 1 2.1 2 2.1h9.5a2 2 0 0 0 1.9-1.3l3-7.4c.2-.2.2-.5.2-.8v-2h.1c0-1.2-1-2.2-2-2.2h-6.7l1-4.8v-.3c0-.4-.1-.8-.4-1.2l-1.1-1ZM4.2 8.4H0V21h4.2V8.4Z" fill="#000"/>
                   </svg>
                   <span class="gallery-photo__number">96</span>
                 </div>
               </div>
             </li>
             <li class="gallery-photo__item">
-              <img class="gallery-photo__img" src="img/photo-4-desktop 1.png" alt="вид на каньон Мост дьявола" width="280" height="280">
+              <div class="gallery-photo__img gallery-photo__img--four"></div>
               <div class="gallery-photo__data">
                 <div class="gallery-photo__description">
                   <h3 class="gallery-photo__name-card">Мост дьявола</h3>
@@ -115,7 +115,7 @@
                 </div>
                 <div class="gallery-photo__like">
                   <svg class="gallery-photo__like-icon" width="23" height="21" xmlns="http://www.w3.org/2000/svg">
-                    <path opacity=".3" d="m13 3.8-.7 3-.6 2.6h9.1v2.2l-3 7.3H8.4V8.4L13 3.8ZM2 10.5v8.4-8.4ZM13.9 0 6.9 7c-.4.2-.6.8-.6 1.4v10.5c0 1.2 1 2.1 2 2.1h9.5a2 2 0 0 0 1.9-1.3l3-7.4c.2-.2.2-.5.2-.8v-2h.1c0-1.2-1-2.2-2-2.2h-6.7l1-4.8v-.3c0-.4-.1-.8-.4-1.2l-1.1-1ZM4.2 8.4H0V21h4.2V8.4Z" fill="#000"/>
+                    <path fill="currentColor" d="m13 3.8-.7 3-.6 2.6h9.1v2.2l-3 7.3H8.4V8.4L13 3.8ZM2 10.5v8.4-8.4ZM13.9 0 6.9 7c-.4.2-.6.8-.6 1.4v10.5c0 1.2 1 2.1 2 2.1h9.5a2 2 0 0 0 1.9-1.3l3-7.4c.2-.2.2-.5.2-.8v-2h.1c0-1.2-1-2.2-2-2.2h-6.7l1-4.8v-.3c0-.4-.1-.8-.4-1.2l-1.1-1ZM4.2 8.4H0V21h4.2V8.4Z" fill="#000"/>
                   </svg>
                   <span class="gallery-photo__number">254</span>
                 </div>
