добавляет карту и видео

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -128,7 +128,7 @@
           <h2 class="video-block__title title--large">Все еще сомневаетесь?</h2>
           <p class="video-block__description">Смотрите видеопрезентацию и скорее за билетами пока они не подорожали в очередной раз!</p>
         </div>
-        <video src="#">
+        <video class="video-block__video" src="#">
           <p>Браузер не может отобразить данное видео. Вы можете посмотреть его
             <a href="#">по ссылке.</a>
           </p>
