--- a/source/form.html
+++ b/source/form.html
@@ -44,11 +44,11 @@
         </div>
         <nav class="main-nav main-nav__burger-menu">
           <ul class="main-nav__list">
-            <li class="main-nav__item main-nav__item--active">
-              <a class="link main-nav-link" href="#">Главная</a>
+            <li class="main-nav__item">
+              <a class="link main-nav-link" href="index.html">Главная</a>
             </li>
             <li class="main-nav__item">
-              <a class="link main-nav-link" href="#">Фото и видео</a>
+              <a class="link main-nav-link" href="catalog.html">Фото и видео</a>
             </li>
             <li class="main-nav__item main-nav__item-logo">
               <div class="main-header__logo-s">
@@ -58,10 +58,10 @@
               </div>
             </li>
             <li class="main-nav__item">
-              <a class="link main-nav-link" href="#">Форма отзыва</a>
+              <a class="link main-nav-link main-nav-link--active" href="#">Форма отзыва</a>
             </li>
             <li class="main-nav__item">
-              <a class="link main-nav-link" href="#">HTML Academy</a>
+              <a class="link main-nav-link" href="https://htmlacademy.ru/">HTML Academy</a>
             </li>
           </ul>
         </nav>
@@ -92,15 +92,15 @@
             <ul class="form-feedback__list form-feedback__list--inputs">
               <li class="form-feedback__item input">
                 <label class="form-feedback__label input__label">Имя*:</label>
-                <input class="form-feedback__input input__input" type="text" name="name" placeholder="Пётр">
+                <input class="form-feedback__input input__input" type="text" name="name" placeholder="Введите имя" value="Пётр">
               </li>
               <li class="form-feedback__item input">
                 <label class="form-feedback__label input__label">Фамилия*:</label>
-                <input class="form-feedback__input input__input" type="text" name="name" placeholder="Пустота">
+                <input class="form-feedback__input input__input" type="text" name="name" placeholder="Введите фамилию" value="Пустота">
               </li>
               <li class="form-feedback__item input">
                 <label class="form-feedback__label input__label">Отчество:</label>
-                <input class="form-feedback__input input__input" type="text" name="name" placeholder="Викторович">
+                <input class="form-feedback__input input__input" type="text" name="name" placeholder="Введите отчество" value="Викторович">
               </li>
             </ul>
           </fieldset>
@@ -185,7 +185,7 @@
             </div>
             <legend class="visually-hidden">Опишите свои эмоции:</legend>
               <label class="form-feedback__label">
-                <textarea class="form-feedback__text input__input input__input--area" name="attractions" rows="5" cols="auto">Опишите подробно все свои восторги</textarea>
+                <textarea class="form-feedback__text input__input input__input--area" name="attractions" rows="5" cols="auto" placeholder="Опишите подробно все свои восторги"></textarea>
               </label>
           </fieldset>
           <div class="form-feedback__block-button">
