--- a/source/index.html
+++ b/source/index.html
@@ -53,11 +53,11 @@
         </div>
         <nav class="main-nav main-nav__burger-menu">
           <ul class="main-nav__list">
-            <li class="main-nav__item main-nav__item--active">
-              <a class="link main-nav-link" href="#">Главная</a>
+            <li class="main-nav__item">
+              <a class="link main-nav-link main-nav-link--active" href="#">Главная</a>
             </li>
             <li class="main-nav__item">
-              <a class="link main-nav-link" href="#">Фото и видео</a>
+              <a class="link main-nav-link" href="catalog.html">Фото и видео</a>
             </li>
             <li class="main-nav__item main-nav__item-logo">
               <div class="main-header__logo-s">
@@ -67,10 +67,10 @@
               </div>
             </li>
             <li class="main-nav__item">
-              <a class="link main-nav-link" href="#">Форма отзыва</a>
+              <a class="link main-nav-link" href="form.html">Форма отзыва</a>
             </li>
             <li class="main-nav__item">
-              <a class="link main-nav-link" href="#">HTML Academy</a>
+              <a class="link main-nav-link" href="https://htmlacademy.ru/">HTML Academy</a>
             </li>
           </ul>
         </nav>
