--- a/source/catalog.html
+++ b/source/catalog.html
@@ -237,7 +237,7 @@
         </section>
         <section class="main-footer__copyright copyright">
           <h2 class="visually-hidden">Разработано в HTML Academy</h2>
-          <a class="copyright__link" href="#">
+          <a class="copyright__link" href="https://htmlacademy.ru/">
             <span class="copyright__text">Разработано</span>
             <svg width="27" height="35">
               <use xlink:href="#logo-html-academy"></use>
