Вносит изменения в разметку

--- a/source/form.html
+++ b/source/form.html
@@ -249,5 +249,15 @@
         <a class="modal-window__button button-primary" href="#close">OK</a>
       </div>
     </div>
+    <div class="modal" id="modal-window-true">
+      <h2 class="visually-hidden">отзыв отправлен</h2>
+      <div class="modal-window modal-window__2">
+        <span class="title modal-window__title">Ваш отзыв отправлен!</span>
+        <span class="description modal-window__description">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</span>
+      </div>
+      <div class="modal-window__button-block">
+        <a class="modal-window__button button-primary" href="#close">Закрыть окно</a>
+      </div>
+    </div>
   </body>
 </html>
