--- a/source/form.html
+++ b/source/form.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>HTML Academy: Седона</title>
-  <link rel="stylesheet" href="css/style.min.css" />
-  <link rel="icon" href="favicon.ico" />
-  <link rel="icon" type="image/png" href="img/favicon-32x32.png" />
+  <link rel="stylesheet" href="css/style.min.css"/>
+  <link rel="icon" href="favicon.ico"/>
+  <link rel="icon" type="image/png" href="img/favicon-32x32.png"/>
 </head>
 <body class="page__body">
   <svg style="display: none;">
@@ -83,10 +83,10 @@
     <div class="main-header__wrapper">
       <a class="main-header__logo">
         <svg width="185" height="96">
-          <use xlink:href="#icon-login"></use>
+          <use xlink:href="img/sprite.svg#main-logo"></use>
         </svg>
       </a>
-      <input class="main-nav__toogle" type="checkbox" name="menu" />
+      <input class="main-nav__toogle" type="checkbox" name="menu"/>
       <div class="main-nav__hamburger-lines">
         <span class="line line1"></span>
         <span class="line line2"></span>
@@ -99,7 +99,7 @@
           <li class="main-nav__item main-nav__item-logo">
             <div class="main-header__logo-s">
               <svg width="185" height="96">
-                <use xlink:href="#icon-login-2"></use>
+                <use xlink:href="img/sprite.svg#main-logo"></use>
               </svg>
             </div>
           </li>
@@ -114,7 +114,7 @@
       <h1 class="visually-hidden">Седона</h1>
       <div class="hero-block-inner__logo">
         <picture>
-          <source media="(min-width: 768px)" srcset="img/sedona_hero.svg" width="457" height="78" />
+          <source media="(min-width: 768px)" srcset="img/sedona_hero.svg" width="457" height="78"/>
           <img src="img/sedona_hero.svg" width="229" height="39" />
         </picture>
       </div>
@@ -164,7 +164,7 @@
               <div class="input-with-icon input-with-icon">
                 <label class="form-feedback__label input__label">Электронная почта*:</label>
                 <div class="input-with-icon__container">
-                  <input class="form-feedback__input input__input input__input--with-icon" type="text" name="email" placeholder="Введите e-mail" />
+                  <input class="form-feedback__input input__input input__input--with-icon" type="text" name="email" placeholder="Введите e-mail"/>
                   <div class="input-with-icon__mail"></div>
                 </div>
               </div>
@@ -250,7 +250,7 @@
           <li class="social-network__item social-network__item--vk">
             <a class="social-network__link">
               <svg class="social-network__icon" width="24" height="14">
-                <use xlink:href="#social-network-vk"></use>
+                <use xlink:href="img/sprite.svg#icon-vk"></use>
               </svg>
               <span class="visually-hidden">Вконтакте</span>
             </a>
@@ -258,7 +258,7 @@
           <li class="social-network__item social-network__item--telegram">
             <a class="social-network__link">
               <svg class="social-network__icon" width="22" height="18">
-                <use xlink:href="#social-network-telegram"></use>
+                <use xlink:href="img/sprite.svg#icon-telegram"></use>
               </svg>
               <span class="visually-hidden">Телеграм</span>
             </a>
@@ -266,7 +266,7 @@
           <li class="social-network__item social-network__item--youtube">
             <a class="social-network__link">
               <svg class="social-network__icon" width="20" height="14">
-                <use xlink:href="#social-network-youtube"></use>
+                <use xlink:href="img/sprite.svg#icon-youtube"></use>
               </svg>
               <span class="visually-hidden">Ютуб</span>
             </a>
@@ -278,7 +278,7 @@
         <a class="copyright__link" href="https://htmlacademy.ru/">
           <span class="copyright__text">Разработано</span>
           <svg width="27" height="35">
-            <use xlink:href="#logo-html-academy"></use>
+            <use xlink:href="img/sprite.svg#htmlacademy-logo"></use>
           </svg>
         </a>
       </section>
@@ -287,7 +287,8 @@
   <div class="modal">
     <div class="modal-window modal-window__1">
       <h2 class="visually-hidden">ошибка в заполнении формы</h2>
-      <span class="title modal-window__title">Что-то пошло не так!</span> <span class="description modal-window__description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</span>
+      <span class="title modal-window__title">Что-то пошло не так!</span>
+      <span class="description modal-window__description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</span>
       <a class="modal-window__button button-primary" href="#close">OK</a>
     </div>
   </div>
