--- a/source/index.html
+++ b/source/index.html
@@ -87,27 +87,21 @@
           </picture>
         </li>
         <li class="advantages__item advantages__item--icon">
-          <svg class="advantages__icon" width="40" height="40">
-            <use xlink:href="img/sprite.svg#advantages-home"></use>
-          </svg>
+          <img class="advantages__icon" src="img/advantages-home.svg" width="40" height="40">
           <div class="advantages__item-text">
             <h3 class="title title--align-left">Жилье</h3>
             <p class="description description--align-left">Рекомендуем пожить в настоящем мотеле, совсем как в кино!</p>
           </div>
         </li>
         <li class="advantages__item advantages__item--icon">
-          <svg class="advantages__icon" width="40" height="40">
-            <use xlink:href="img/sprite.svg#advantages-food"></use>
-          </svg>
+          <img class="advantages__icon" src="img/advantages-food.svg" width="40" height="40">
           <div class="advantages__item-text">
             <h3 class="title title--align-left">Еда</h3>
             <p class="description description--align-left">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
           </div>
         </li>
         <li class="advantages__item advantages__item--icon">
-          <svg class="advantages__icon" width="40" height="40">
-            <use xlink:href="img/sprite.svg#advantages-gift"></use>
-          </svg>
+          <img class="advantages__icon" src="img/advantages-gift.svg" width="40" height="40">
           <div class="advantages__item-text">
             <h3 class="title title--align-left">Сувениры</h3>
             <p class="description description--align-left">Не только китайского, но и местного производства!</p>
