вносит изменения в модальные окна

--- a/source/form.html
+++ b/source/form.html
@@ -284,7 +284,7 @@
       </section>
     </div>
   </footer>
-  <div class="modal">
+  <div class="modal" id="modal-window-error">
     <div class="modal-window modal-window__1">
       <h2 class="visually-hidden">ошибка в заполнении формы</h2>
       <span class="title modal-window__title">Что-то пошло не так!</span>
@@ -292,13 +292,17 @@
       <a class="modal-window__button button-primary" href="#close">OK</a>
     </div>
   </div>
-  <div class="modal">
-    <h2 class="visually-hidden">отзыв отправлен</h2>
-    <div class="modal-window modal-window__2">
-      <span class="title modal-window__title">Ваш отзыв отправлен!</span>
-      <span class="description modal-window__description">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</span>
+  <div class="modal-2">
+    <div class="modal-true">
+      <h2 class="visually-hidden">отзыв отправлен</h2>
+      <div class="modal-window__main">
+        <span class="title modal-window__title">Ваш отзыв отправлен!</span>
+        <span class="description modal-window__description">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</span>
+      </div>
+      <div class="modal-window__button-block">
+        <button class="modal-window__button button-primary" type="button">Закрыть окно</button>
+      </div>
     </div>
-    <div class="modal-window__button-block"><a class="modal-window__button button-primary" href="#close">Закрыть окно</a></div>
   </div>
 </body>
 </html>
